changement de la phrase accroche

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           <span class="lang-fr">SQWEEZY, le compacteur futé qui change tout à la maison</span>
           <span class="lang-en">SQWEEZY, the smart compactor that changes everything at home </span>
         </h1>
-        <p class="sub lang-fr">Compactez bouteilles plastiques (jusqu’à 1,5&nbsp;L) et canettes en réduisant jusqu’à –85&nbsp;% leur volume. Simple, pratique, portable et sans électricité. Conçu par SKIMSTONES, fabriqué avec ♥ au Maroc.</p>
-        <p class="sub lang-en">Compact plastic bottles (up to 1.5&nbsp;L) and cans by reducing their volume up to –85%. Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
+        <p class="sub lang-fr">Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! Simple, pratique, portable et sans électricité. Conçu par SKIMSTONES, fabriqué avec ♥ au Maroc.</p>
+        <p class="sub lang-en">Compact your empty plastic bottles and cans by reducing their volume up to –85%. Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
 
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
   <!-- FR -->
