--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       <div>
         <span class="badge">ABS recyclé · CE</span>
         <h1>
-          <span class="lang-fr">SQWEEZY, le compacteur futé qui change tout à la maison</span>
-          <span class="lang-en">SQWEEZY, the smart compactor that changes everything at home </span>
+          <span class="lang-fr">SQWEEZY, le petit compacteur qui vous change la vie</span>
+          <span class="lang-en">SQWEEZY, the smart compactor that changes a lot at home </span>
         </h1>
-        <p class="sub lang-fr">Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! Simple, pratique, portable et sans électricité. Conçu par SKIMSTONES, fabriqué avec ♥ au Maroc.</p>
+        <p class="sub lang-fr">Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! Simple, pratique, portable et sans électricité. Conçu par SKIMSTONES, Fabriqué avec ♥ au Maroc.</p>
         <p class="sub lang-en">Compact your empty plastic bottles and cans by reducing their volume up to –85%. Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
 
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
