--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
       <div>
         <span class="badge">ABS recyclé · CE</span>
         <h1>
-          <span class="lang-fr">SQWEEZY, le petit compacteur qui vous change la vie</span>
-          <span class="lang-en">SQWEEZY, the smart compactor that changes a lot at home </span>
+          <span class="lang-fr">Bienvenue chez SQWEEZY, le petit compacteur qui change la vie à la maison</span>
+          <span class="lang-en">Welcome to SQWEEZY, the smart compactor that changes life at home </span>
         </h1>
         <p class="sub lang-fr">Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! Simple, pratique, portable et sans électricité. Conçu par SKIMSTONES, Fabriqué avec ♥ au Maroc.</p>
-        <p class="sub lang-en">Compact your empty plastic bottles and cans by reducing their volume up to –85%. Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
+        <p class="sub lang-en">Compact your empty plastic bottles and cans by reducing their volume up to –85%! Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
 
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
   <!-- FR -->
@@ -327,10 +327,10 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
   <h2 class="lang-fr">Galerie</h2>
   <h2 class="lang-en">Gallery</h2>
   <div class="gallery">
-    <img src="/ouvert.png" alt="SQWEEZY – vue ouverte" loading="lazy" decoding="async" />
-    <img src="/ferm%C3%A9.png" alt="SQWEEZY – vue fermée" loading="lazy" decoding="async" />
-    <img src="/avec%20bouteille%20compact%C3%A9e.png" alt="SQWEEZY – avec bouteille compactée" loading="lazy" decoding="async" />
     <img src="/fichetech.png" alt="SQWEEZY – fiche technique" loading="lazy" decoding="async" />
+    <img src="/avec%20bouteille%20compact%C3%A9e.png" alt="SQWEEZY – avec bouteille compactée" loading="lazy" decoding="async" />
+    <img src="/ferm%C3%A9.png" alt="SQWEEZY – vue fermée" loading="lazy" decoding="async" />
+    <img src="/ouvert.png" alt="SQWEEZY – vue ouverte" loading="lazy" decoding="async" />
 
   </div>
 </section>
