--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           <span class="lang-fr">Bienvenue chez SQWEEZY, le petit compacteur qui change la vie à la maison</span>
           <span class="lang-en">Welcome to SQWEEZY, the smart compactor that changes life at home </span>
         </h1>
-        <p class="sub lang-fr">Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! Simple, pratique, portable et sans électricité. Conçu par SKIMSTONES, Fabriqué avec ♥ au Maroc.</p>
-        <p class="sub lang-en">Compact your empty plastic bottles and cans by reducing their volume up to –85%! Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
+        <p class="sub lang-fr">Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! Simple, pratique, portable et sans électricité. Conçu et fabriqué avec ♥ par SKIMSTONES.</p>
+        <p class="sub lang-en">Compact your empty plastic bottles and cans by reducing their volume up to –85%! Simple, handy, portable and energy-free. Designed and manufactured with ♥ by SKIMSTONES.</p>
 
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
   <!-- FR -->
