--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
   .why2::before { content: "👨‍👨‍👧‍👦"; }      /* geste éco */
   .why3::before { content: "🛡️"; }     /* énergie */
   .why4::before { content: "©️"; }      /* design breveté */
-  .why5::before { content: "🏋️‍♀️"; }      /* compact/stable */
+  .why5::before { content: "🎲"; }      /* compact/stable */
   .why6::before { content: "♻️"; }      /* éco-conçu */
   .why7::before { content: "🗜️"; }      /* formats bouteille/canette */
   .why8::before { content: "🐱"; }      /* ludique */
@@ -215,7 +215,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
   <!-- Bouton Découvrir / Explore -->
   <a class="btn ghost" href="#features">
     <span class="lang-fr">Découvrir</span>
-    <span class="lang-en">Explore</span>
+    <span class="lang-en">Discover</span>
   </a>
 </div>
 
