--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SQWEEZY by SKIMSTONES — the smart compactor (FR/EN)</title>
+    <title>SQWEEZY — the smart compactor</title>
 
   <meta name="description" content="Découvrez SQWEEZY, le compacteur éco-conçu par SKIMSTONES pour écraser bouteilles plastiques et canettes – simple, pratique, ludique, sans énergie. / Discover SQWEEZY, the smart, energy-free home compactor for plastic bottles and cans." />
-<link rel="icon" type="image/x-icon" href="/flavico.ico"/>
+  <link rel="icon" type="image/x-icon" href="/flavico.ico"/>
  <style>
     /* Polices charte */
     @font-face { font-family: 'Gadugi'; src: local('Gadugi'), local('Gadugi-Regular'); }
@@ -183,9 +183,9 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           <button id="btn-en" class="btn ghost" aria-label="English">EN</button>
         </div>
       </div>
-      <nav style="display:flex;gap:12px;align-items:center;flex-wrap:wrap">
-  <a class="btn" href="#contact"><span class="lang-fr">Nous contacter</span><span class="lang-en">Contact us</span></a>
-</nav>
+        <nav style="display:flex;gap:12px;align-items:center;flex-wrap:wrap">
+          <a class="btn" href="#contact"><span class="lang-fr">Nous contacter</span><span class="lang-en">Contact us</span></a>
+        </nav>
     </div>
   </header>
 
@@ -198,10 +198,18 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           <span class="lang-fr">Bienvenue chez SQWEEZY, le petit compacteur qui change la vie à la maison</span>
           <span class="lang-en">Welcome to SQWEEZY, the smart compactor that changes life at home </span>
         </h1>
-        <p class="sub lang-fr">Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! Simple, pratique, portable et sans électricité. Conçu et fabriqué avec ♥ par SKIMSTONES.</p>
-        <p class="sub lang-en">Compact your empty plastic bottles and cans by reducing their volume up to –85%! Simple, handy, portable and energy-free. Designed and manufactured with ♥ by SKIMSTONES.</p>
+        <p class="sub lang-fr">
+          Compactez vos bouteilles plastiques et canettes usagées en réduisant jusqu’à –85&nbsp;% leur volume ! 
+          Simple, pratique, portable et sans électricité.<br>
+          Conçu et fabriqué avec ♥ par SKIMSTONES.
+        </p>
 
-        <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
+        <p class="sub lang-en">
+          Compact your empty plastic bottles and cans by reducing their volume up to –85%! 
+          Simple, handy, portable and energy-free.<br>
+          Designed and manufactured with ♥ by SKIMSTONES.
+        </p>
+      <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
   <!-- FR -->
   <button class="btn secondary lang-fr" data-video="t9LwSsf3-10" data-label="SQWEEZY FR">
     ▶ Voir la vidéo
@@ -243,7 +251,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
   <div class="why-card why6"><b>Éco-conçu</b>En ABS recyclé et pièces métalliques durables, certifié CE.</div>
   <div class="why-card why7"><b>Compatible tous formats</b>De la canette 33 cl à la bouteille 1,5 L, un seul geste suffit.</div>
   <div class="why-card why8"><b>Ludique</b>Un réflexe simple et engageant, adopté par petits et grands.</div>
-  <div class="why-card why9"><b>Moins de collectes et des économies pour la collectivité</b>A grande échelle, par ex. 100.000 foyers, SQWEEZY permet + de 5 M€ d'économies annuelles, et évite le dégagement de + de 5.000 tonnes de CO2 </div>
+  <div class="why-card why9"><b>Moins de collectes et des économies pour la collectivité</b>A grande échelle, par ex. 100.000 foyers, SQWEEZY permet + de 5 M€ d'économies annuelles, et évite le dégagement de + de 5.000 tonnes de CO₂ </div>
 </div>
 
 <!-- EN -->
@@ -256,7 +264,7 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
   <div class="why-card why6"><b>Eco-designed</b>Recycled ABS and durable metal parts, CE-certified.</div>
   <div class="why-card why7"><b>Compatibility to all common sizes</b>From 330 ml cans to 1.5 L bottles — one simple press.</div>
   <div class="why-card why8"><b>Fun to use</b>A simple, engaging reflex the whole family adopts, including children!</div>
-<div class="why-card why9"><b>Fewer collections and savings for the community</b>On a large scale — e.g. 100,000 households — SQWEEZY generates over €5 million in annual savings and prevents more than 5,000 tons of CO₂ emissions.</div>
+<div class="why-card why9"><b>Fewer collections and savings for the community</b>On a large scale, e.g. 100,000 households, SQWEEZY generates over €5 M in annual savings and prevents more than 5,000 tons of CO₂ emissions.</div>
 </div>
 
 
